# github_actions_live_de_python

./: pyproject.toml
.github/workflows/: ci.yml  ci_paralelo.yml  deploy_automatico.yml  deploy_manual.yml
app/: __init__.py  calc.py
